--- a/unit2layouts/app/src/main/res/values/strings.xml
+++ b/unit2layouts/app/src/main/res/values/strings.xml
@@ -7,5 +7,5 @@
     <string name="okay_15_text_option">Okay (15%)</string>
     <string name="round_up_tip_text">Round up tip?</string>
     <string name="calculate_text_button">Calculate</string>
-    <string name="tip_amount_text_result">Tip Amount</string>
+    <string name="tip_amount_text_result">Tip Amount: %s</string>
 </resources>
